--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,15 +28,21 @@ jobs:
         with:
           python-version: '3.9' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-
+      
+      - uses: parafoxia/pip-install@v1
+        with:
+          # Any input that accepts multiple parameters can accept them on a
+          # single line, or across multiple lines.
+          requirements: |
+            requirements.txt
+      
       # Build python script into a stand-alone exe
       - uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
           script-name: app.py
           onefile: true
-          enable-plugins: pyside6
-
+      
       # Uploads artifact
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
