--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,11 +22,11 @@ jobs:
 
       # Check-out repository
       - name: Check Out Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Setup Python
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
@@ -41,10 +41,11 @@ jobs:
           nuitka-version: main
           script-name: app.py
           onefile: true
+          enable-plugins: pyside6
       
       # Uploads artifact
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: exe
-          path: build/pickleballcharter.exe
+          path: build/app.exe
